--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 
 server.port=80
-
-spring.data.mongodb.port=27017
-spring.data.mongodb.host=localhost
 spring.data.mongodb.database=cinemas
+spring.data.mongodb.host=cinemas-db
+spring.data.mongodb.port=27017
