--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -7,3 +7,10 @@ jobs:
       - run: echo "Je teste"
       - name: Je liste mes fichiers ?
         run : ls
+  deploy:
+    runs-on: ubuntu-latest
+    needs: test
+    if: github.ref == 'refs/heads/develop'
+    steps:
+      - name: Deploy app
+        run: echo "Test develop"
