--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -7,10 +7,8 @@ jobs:
       - run: echo "Je teste"
       - name: Je liste mes fichiers ?
         run : ls
-  deploy:
+  job:
     runs-on: ubuntu-latest
-    needs: test
-    if: github.ref == 'refs/heads/develop'
+    if: github.ref == 'refs/heads/develop' # run this job only for the dev branch
     steps:
-      - name: Deploy app
-        run: echo "Test develop"
+      - run: echo "Je teste sur la nouvelle branche"
